# miniasmemulator

./: CMakeLists.txt  README.md
libs/compiler/include/: compiler.h
libs/compiler/src/: add_var.c  addressing.c  get_var.c  global_parser.c
libs/compiler/src/helpers/: get_register.c
libs/compiler/src/instructions/: add_ins.c  read_ins.c
libs/compiler/src/parsing/: addressing.c  global_parser.c
libs/compiler/src/variables/: add_var.c  get_var.c
libs/globals/include/: globals.h
libs/memory/include/: memory.h
libs/memory/src/: init.c
libs/microops/include/: microops.h
libs/microops/src/: add,c  mov.c  sub.c
libs/microops/src/alu/: add.c  div.c  mul.c  sub.c
libs/microops/src/flow/: cmp.c
libs/microops/src/logic/: and.c  not.c  or.c  xor.c
libs/microops/src/memory/: jmp.c  mov.c
libs/microops/src/stack/: pop.c  push.c
src/: main.c
